bugfixes and readability

--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,11 @@ table, th, td {
     border: 1px solid #000000;
     border-collapse: collapse;
 }
+
+#errorMessage {
+    color: red;
+    background-color: coral;
+    border: 1px solid red;
+    padding: 5px;
+    margin: 0.5em;
+}
